# CSC324

./: README.md
CSC324_Project1/: P1 Written Explanations.docx  P1.hs  P1StarterTests.hs  P1Types.hs  computeSpreadsheetTests.hs  evalDeerTests.hs  helperTests.hs  notes.txt
CSC324_Project2/: might_need_later.txt  p2-base copy.rkt  p2-base.rkt  p2-spreadsheet.rkt  p2-starter-tests.rkt  p2-writeup.docx
CSC324_Project2/compiled/drracket/errortrace/: mk_rkt.dep  mk_rkt.zo  p2-base_rkt.dep  p2-base_rkt.zo
ex1/: Ex1.hs  ex1.rkt
ex10/: Ex10.hs  Ex10Tests.hs
ex2/: ex2.rkt  ex2.rkt~
ex3/: 123.rkt  Ex3.hs  Ex3Types.hs  ex3 1.rkt  ex3.rkt  ex3.rkt~
ex4/: Ex4.hs  ex4.rkt  ex4.rkt~
ex4/ex4.hsproj/Ex4/: Ex4.cabal  Ex4.hs  Ex4Types.hs
ex6/: ex6.rkt
ex7/: ex7 1.rkt  ex7.rkt  ex7.rkt~  stream.rkt
ex7/compiled/drracket/errortrace/: stream_rkt.zo
ex8/: amb.rkt  ex8.rkt  ex8.rkt~
ex8/compiled/drracket/errortrace/: amb_rkt.dep  amb_rkt.zo  stream_rkt.dep  stream_rkt.zo
ex9/: evalo.rkt  ex9.rkt  ex9.rkt~
ex9/compiled/drracket/errortrace/: evalo_rkt.dep  evalo_rkt.zo  mk_rkt.zo  numbers_rkt.dep  numbers_rkt.zo
